--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f9;
+    background-color: #9c9cee;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -15,7 +15,7 @@ body {
 
 .container {
     text-align: center;
-    background: #fff;
+    background: #bfd680;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -25,7 +25,7 @@ body {
 
 header h1 {
     font-size: 24px;
-    color: #333;
+    color: #becf23;
     margin-bottom: 20px;
 }
 
@@ -37,7 +37,7 @@ header h1 {
 
 .option {
     text-align: center;
-    background-color: #f9f9f9;
+    background-color: #ac6969;
     padding: 15px;
     border-radius: 8px;
     width: 30%;
@@ -53,7 +53,7 @@ header h1 {
 
 .option h3 {
     font-size: 20px;
-    color: #333;
+    color: #bf42ca;
     margin-bottom: 10px;
 }
 
